# frappe_france

./: README.md  pyproject.toml
.github/workflows/: ci.yml
frappe_france/: hooks.py  modules.txt
frappe_france/public/css/: france.css
frappe_france/translations/: fr.csv
